--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
         if: always()
         uses: andstor/copycat-action@v3
         with:
-          personal_token: ${{ secrets.PERSONAL_TOKEN }}
+          personal_token: ${{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}}
           src_path: /.
           dst_path: /
           # 你的用户名
