--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,7 @@ jobs:
           src_path: /.
           dst_path: /
           # 你的用户名
-          dst_owner: hanami1216
+          dst_owner: Hanami1216
           # 与 Vercel 链接的仓库名，也就是 Vercel 部署时新建的仓库
           dst_repo_name: hanami-vercel
           dst_branch: main
