--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "vuepress": "2.0.0-beta.61",
     "vuepress-plugin-search-pro": "2.0.0-beta.189",
     "vuepress-theme-hope": "2.0.0-beta.189"
+  },
+  "devDependencies": {
+    "@vuepress/plugin-register-components": "^2.0.0-beta.61"
   }
 }
