--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,8 @@ jobs:
           # 如果你文档需要 Git 子模块，取消注释下一行
           # submodules: true
 
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
+      - name: Install npm
+        uses: npm/action-setup@v2
         with:
           version: 7
           run_install: true
@@ -28,15 +28,15 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: pnpm
+          cache: npm
 
       # 将读书笔记复制到静态页路径，然后构建页面
       - name: Build Docs
         env:
           NODE_OPTIONS: --max_old_space_size=8192
         run: |-
-          pnpm cpx "docs/reading/**" docs/.vuepress/public/reading
-          pnpm run docs:build
+          npm cpx "docs/reading/**" docs/.vuepress/public/reading
+          npm run docs:build
           > docs/.vuepress/dist/.nojekyll
 
       - name: Deploy GitHub Pages
