--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,37 +18,37 @@ jobs:
           # 如果你文档需要 Git 子模块，取消注释下一行
           # submodules: true
 
-      - name: Install npm
-        uses: npm/action-setup@v2
+      - name: Install Node.js
+        uses: actions/setup-node@v2
         with:
-          version: 7
-          run_install: true
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: npm
+          node-version: 14.x
 
       # 将读书笔记复制到静态页路径，然后构建页面
       - name: Build Docs
         env:
           NODE_OPTIONS: --max_old_space_size=8192
         run: |-
-          npm cpx "docs/reading/**" docs/.vuepress/public/reading
+          npm run cpx "docs/reading/**" docs/.vuepress/public/reading
           npm run docs:build
           > docs/.vuepress/dist/.nojekyll
 
+      # 部署到 GitHub Pages
       - name: Deploy GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           # 这是文档部署到的分支名称
           branch: gh-pages
           folder: docs/.vuepress/dist
+
       # 将页面更新到 Vercel
       - name: Copy file to Vercel
-        if: always()
-        uses: andstor/copycat-action@v3
+        uses: actions/upload-artifact@v2
+        with:
+          name: build
+          path: docs/.vuepress/dist
+
+      - name: Deploy to Vercel
+        uses: amondnet/upload-artifact-vercel-action@v1.0.1
         with:
           personal_token: ${{secrets.PERSONAL_TOKEN }}
           src_path: /.
@@ -60,4 +60,3 @@ jobs:
           dst_branch: main
           src_branch: gh-pages
           clean: true
-
